// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontVariationSettings renders 0 1`] = `
Array [
  .c0 {
  font-variation-settings: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariationSettings renders function 1`] = `
Array [
  .c0 {
  font-variation-settings: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariationSettings renders invalid theme path 1`] = `
Array [
  .c0 {
  font-variation-settings: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariationSettings renders negative number 1`] = `
Array [
  .c0 {
  font-variation-settings: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariationSettings renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-variation-settings: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variation-settings: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variation-settings: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variation-settings: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-variation-settings: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variation-settings: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variation-settings: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variation-settings: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-variation-settings: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variation-settings: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variation-settings: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variation-settings: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-variation-settings: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variation-settings: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variation-settings: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variation-settings: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariationSettings renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    font-variation-settings: July;
  }
}

@media April {
  .c0 {
    font-variation-settings: August;
  }
}

@media January {
  .c0 {
    font-variation-settings: September;
  }
}

@media April {
  .c0 {
    font-variation-settings: November;
  }
}

@media June {
  .c0 {
    font-variation-settings: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-variation-settings: July;
  }
}

@media April {
  .c0 {
    font-variation-settings: August;
  }
}

@media January {
  .c0 {
    font-variation-settings: September;
  }
}

@media April {
  .c0 {
    font-variation-settings: November;
  }
}

@media June {
  .c0 {
    font-variation-settings: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-variation-settings: January;
  }
}

@media April {
  .c0 {
    font-variation-settings: December;
  }
}

@media January {
  .c0 {
    font-variation-settings: April;
  }
}

@media April {
  .c0 {
    font-variation-settings: May;
  }
}

@media June {
  .c0 {
    font-variation-settings: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-variation-settings: January;
  }
}

@media April {
  .c0 {
    font-variation-settings: December;
  }
}

@media January {
  .c0 {
    font-variation-settings: April;
  }
}

@media April {
  .c0 {
    font-variation-settings: May;
  }
}

@media June {
  .c0 {
    font-variation-settings: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariationSettings renders postitive number 1`] = `
Array [
  .c0 {
  font-variation-settings: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariationSettings renders string 1`] = `
Array [
  .c0 {
  font-variation-settings: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariationSettings renders valid theme path 1`] = `
Array [
  .c0 {
  font-variation-settings: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-variation-settings: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
